adding initial project structure

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Link Tree JS</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <div class="container">
+      <div class="profile">
+        <img
+          src="assets/profile.jpg"
+          alt="Imagem de Perfil do usuário do Link Tree JS"
+        />
+        <p>@jonbrand</p>
+      </div>
+      <div class="container_switch">
+        <button>Switch</button>
+      </div>
+      <div class="container_button_links">
+        <ul>
+          <li>
+            <a href="#" target="_blank">Meu Portfólio</a>
+          </li>
+          <li>
+            <a href="#">Meu Github</a>
+          </li>
+          <li>
+            <a href="#">Meus Artigos</a>
+          </li>
+        </ul>
+      </div>
+      <div class="container_social_media">
+        <div>Github</div>
+        <div>Twitter</div>
+        <div>Linkedin</div>
+      </div>
+      <div class="container_footer">
+        <p>Feito com ♥ por Jonbrand</p>
+      </div>
+    </div>
   </body>
 </html>
