feat: adding icons

--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,21 @@
         </ul>
       </div>
       <div class="container_social_media">
-        <div>Github</div>
-        <div>Twitter</div>
-        <div>Linkedin</div>
+        <ion-icon name="logo-github"></ion-icon>
+        <ion-icon name="logo-twitter"></ion-icon>
+        <ion-icon name="logo-linkedin"></ion-icon>
       </div>
       <div class="container_footer">
         <p>Feito com ♥ por Jonbrand</p>
       </div>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
